Docs and OMP support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,23 @@ if (MSVC_VERSION GREATER_EQUAL "1900")
     endif()
 endif()
 
+# Add OpenMP for easy multi-threading of graphic routines.
+find_package(OpenMP)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(CGProj PUBLIC OpenMP::OpenMP_CXX)
+endif()
+
+set_target_properties(CGProj PROPERTIES
+    VS_GLOBAL_RunCodeAnalysis true
+
+    # Use visual studio core guidelines
+    VS_GLOBAL_EnableMicrosoftCodeAnalysis true
+    VS_GLOBAL_CodeAnalysisRuleSet ${CMAKE_CURRENT_SOURCE_DIR}/CGProj.ruleset
+    VS_GLOBAL_CodeAnalysisRuleSet ${CMAKE_CURRENT_SOURCE_DIR}/CGProj.ruleset
+
+    # Use clangtidy
+    VS_GLOBAL_EnableClangTidyCodeAnalysis true
+    VS_GLOBAL_ClangTidyChecks -checks=-*,modernize-*,-modernize-use-trailing-return-type
+)
+
 # TODO: Add tests and install targets if needed.
